# SbossTreeSitty

./: bat.bat  build.gradle.kts  dependencies.gradle.kts  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/sbostreesitty/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  emulator_core.cpp  native-lib.cpp
app/src/main/java/com/example/sbostreesitty/: MainActivity.kt
app/src/main/java/jp/xenia/emulator/core/: EmulatorCore.kt
app/src/main/java/jp/xenia/emulator/ui/: MainActivity.kt
app/src/main/jni/: Android.mk.txt  Application.mk.txt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/sbostreesitty/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/java/com/example/xenia/: MainActivity.java  XeniaWrapper.java
